--- a/templates/index.html
+++ b/templates/index.html
@@ -104,7 +104,7 @@
                 // Make AJAX request to login endpoint using JSON
                 $.ajax({
                     //url: 'http://localhost:8000/login',
-                    url: 'http://unifyhn.de/login',
+                    url: 'http://hnunisync.de/login',
                     type: 'POST',
                     data: JSON.stringify(loginData),
                     contentType: 'application/json',
@@ -137,7 +137,7 @@
                 // Make AJAX request to submit OTP endpoint using JSON
                 $.ajax({
                     //url: 'http://localhost:8000/submit-otp',
-                    url: 'http://unifyhn.de/submit-otp',
+                    url: 'http://hnunisync.de/submit-otp',
                     type: 'POST',
                     data: JSON.stringify(otpData),
                     contentType: 'application/json',
