change to test project

--- a/templates/index.html
+++ b/templates/index.html
@@ -134,6 +134,8 @@
                     session_id: sessionId  // Send session ID with OTP
                 };
 
+                console.log(otpData)
+
                 // Make AJAX request to submit OTP endpoint using JSON
                 $.ajax({
                     //url: 'http://localhost:8000/submit-otp',
