--- a/templates/index_working.html
+++ b/templates/index_working.html
@@ -55,25 +55,32 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
-    <h1>Login Example</h1>
+    <h1>ILIAS-Kurse mit Matrix-Räumen synchronisieren</h1>
 
     <!-- Login Form -->
-    <form id="loginForm">
-        <label for="username">Username:</label><br>
-        <input type="text" id="username" name="username" required><br>
+    <div id="login-view">
+        <h2>Mit HHN-Account anmelden</h2>
+        <form id="loginForm">
+            <label for="username">Benutzername oder E-Mail:</label><br>
+            <input type="text" id="username" name="username" required><br>
 
-        <label for="password">Password:</label><br>
-        <input type="password" id="password" name="password" required><br>
+            <label for="password">Passwort:</label><br>
+            <input type="password" id="password" name="password" required><br>
 
-        <input type="submit" value="Login">
-    </form>
+            <input type="submit" value="Anmelden">
+        </form>
+    </div>
 
-    <!-- OTP Form (hidden by default) -->
-    <form id="otpForm" style="display: none; margin-top: 20px;">
-        <label for="otp">Enter OTP:</label><br>
-        <input type="text" id="otp" name="otp" required><br>
-        <input type="submit" value="Submit OTP">
-    </form>
+
+    <div id="otp-view" style="display: none; margin-top: 20px;">
+        <h2>Eingabe eines Verifizierungscodes aus der Authenticator-Anwendung.</h2>
+        <form id="otpForm">
+            <label for="otp">One-time code:</label><br>
+            <input type="text" id="otp" name="otp" required><br>
+            <input type="submit" value="Anmelden">
+        </form>
+    </div>
+
 
     <!-- The Modal for showing the response -->
     <div id="scrapeModal" class="modal">
@@ -84,12 +91,20 @@
         </div>
     </div>
 
+    <div id="user-list" style="display: none;"></div>
+
+
+
     <script>
         $(document).ready(function() {
             const $loginForm = $('#loginForm');
             const $otpForm = $('#otpForm');
             const $modal = $('#scrapeModal');
             const $scrapedDataDiv = $('#scrapedData');
+            const $userListDiv = $('#user-list');
+            const $loginViewDiv = $('#login-view');
+            const $otpViewDiv = $('#otp-view');
+
             let sessionId;  // Store session ID for OTP submission
 
             // When the user submits the login form
@@ -104,7 +119,8 @@
                 // Make AJAX request to login endpoint using JSON
                 $.ajax({
                     //url: 'http://localhost:8000/login',
-                    url: 'http://hnunisync.de/login',
+                    //url: 'http://hnunisync.de/login',
+                    url: '/login',
                     type: 'POST',
                     data: JSON.stringify(loginData),
                     contentType: 'application/json',
@@ -112,9 +128,12 @@
                         if (data.status === 'otp_required') {
                             sessionId = data.session_id;  // Save session ID
                             // Show the OTP form if OTP is required
-                            console.log(sessionId)
-                            $loginForm.hide();
-                            $otpForm.show();
+                            console.log('inside-login-response',sessionId)
+
+                            $loginViewDiv.hide();
+                            //$loginForm.hide();
+                            //$otpForm.show();
+                            $otpViewDiv.show();
                         } else {
                             alert('Login failed');
                         }
@@ -126,11 +145,13 @@
                 });
             });
 
+
+
             // When the user submits the OTP form
             $otpForm.on('submit', function(event) {
                 event.preventDefault();  // Prevent default form submission
 
-                const otpData = {
+                let otpData = {
                     otp: $('#otp').val(),
                     session_id: sessionId  // Send session ID with OTP
                 };
@@ -140,13 +161,24 @@
                 // Make AJAX request to submit OTP endpoint using JSON
                 $.ajax({
                     //url: 'http://localhost:8000/submit-otp',
-                    url: 'http://hnunisync.de/submit-otp',
+                    //url: 'http://hnunisync.de/submit-otp',
+                    url: '/submit-otp',
                     type: 'POST',
                     data: JSON.stringify(otpData),
                     contentType: 'application/json',
                     success: function(data) {
                         // Show the response data in the modal popup
                         $scrapedDataDiv.html(`<p>${data.page_title}</p>`);
+                        console.log('all_email_column_data',data.all_email_column_data)
+                        $otpForm.hide();
+                        $otpViewDiv.hide();
+
+                        // Show the data in the hidden user-list div
+                        if (data.all_email_column_data) {
+                            $userListDiv.html(JSON.stringify(data.all_email_column_data));
+                            $userListDiv.show();  // Unhide the div
+                        }
+
                         $modal.show(); // Show the modal
                     },
                     error: function(err) {
