pop up issue solved

--- a/templates/index.html
+++ b/templates/index.html
@@ -55,7 +55,7 @@
 
     <!-- OTP View (Hidden by default) -->
     <div id="otp-view" class="mt-4" style="display: none;">
-        <h2 class="text-center">Eingabe eines Verifizierungscodes</h2>
+        <h2 class="text-center">Eingabe eines Verifizierungscodes aus der Authenticator-Anwendung.</h2>
         <form id="otpForm" class="mt-3">
             <div class="form-group">
                 <label for="otp">One-time code:</label>
