--- a/templates/index.html
+++ b/templates/index.html
@@ -66,11 +66,14 @@
     </div>
 
     <!-- User List -->
-    <div id="user-list" class="mt-4" style="display: none;">
-        <h3>Kursliste mit eingeschriebenen Studenten</h3>
+    <div id="user-list-view" class="mt-4" style="display: none;">
+        <h2 class="text-center">Kursliste mit eingeschriebenen Studenten</h2>
         <button type="button" class="btn btn-primary btn-block" id="sync-matrix-btn">Sync with matrix</button>
     </div>
-    <div id="sync-list" class="mt-4" style="display: none;"></div>
+
+    <div id="sync-list-view" class="mt-4" style="display: none;">
+        <h2 class="text-center">Die folgenden Schüler sind erfolgreich mit den jeweiligen Matrixräumen synchronisiert</h2>
+    </div>
 
 
 </div>
@@ -84,13 +87,15 @@
         // Store jQuery selectors in reusable variables
         const $loginForm = $('#loginForm');
         const $otpForm = $('#otpForm');
-        const $userListDiv = $('#user-list');
-        const $syncListDiv = $('#sync-list');
+        const $userListViewDiv = $('#user-list-view');
+        const $syncListViewDiv = $('#sync-list-view');
         const $loginViewDiv = $('#login-view');
         const $otpViewDiv = $('#otp-view');
         const $loadingSpinner = $('#loading-spinner');
         const $loginBtn = $('#login-btn');
         const $otpBtn = $('#otp-btn');
+        const $syncMatrixBtn =  $('#sync-matrix-btn');
+
 
         let sessionId;  // Store session ID for OTP submission
         let courseUserListToSync;
@@ -143,14 +148,11 @@
                 contentType: 'application/json',
                 success: function (data) {
                     hideLoading($loginBtn);
-
                     if (data.status === 'success') {
-                        sessionId = data.session_id;  // Save session ID
-                        toggleViews($loginViewDiv, $otpViewDiv);  // Hide login view, show OTP view
                         hideLoading($otpBtn);
                         renderUserList(data.all_email_column_data);
                         courseUserListToSync = data.all_email_column_data
-                        toggleViews($otpViewDiv, $userListDiv);  // Hide OTP view, show user list
+                        toggleViews($otpViewDiv, $userListViewDiv);  // Hide OTP view, show user list
                     } else {
                         alert('Login failed');
                     }
@@ -165,7 +167,7 @@
 
 
         function syncWithMatrix(courses){
-            $loadingSpinner.show();
+            showLoading($syncMatrixBtn);
             console.log(courses)
             $.ajax({
                 url: '/sync-with-matrix',
@@ -173,18 +175,17 @@
                 data: JSON.stringify(courses),
                 contentType: 'application/json',
                 success: function (data) {
-
+                    console.log(data);
                     if (data.status === 'success') {
-                        $loadingSpinner.hide();
-                        $syncListDiv.show();
-                        $syncListDiv.html(data.courses_synced);
-                        console.log(data)
+                        hideLoading($syncMatrixBtn);
+                        renderSyncList(data.courses_synced);
+                        toggleViews($userListViewDiv, $syncListViewDiv);
                     } else {
                         alert('Sync failed');
                     }
                 },
                 error: function (err) {
-                    hideLoading($loginBtn);
+                    hideLoading($syncMatrixBtn);
                     console.error('Error during login:', err);
                     alert('Error during login');
                 }
@@ -197,6 +198,39 @@
          * @param {Array} courses - The array of courses and their users.
          */
         function renderUserList(courses) {
+            if (!courses) return;
+
+            let htmlContent = '';
+
+
+            courses.forEach(course => {
+                htmlContent += `
+                    <div class="card mt-3">
+                        <div class="card-header">
+                            <strong>Course Name: ${course.course_name}</strong>
+                        </div>
+                        <div class="card-body">
+                            <p><strong>Stedenten:</strong></p>
+                            <ul class="list-group">
+                `;
+
+                course.students.forEach(student => {
+                    htmlContent += `<li class="list-group-item">${student}</li>`;
+                });
+
+                htmlContent += `
+                            </ul>
+                        </div>
+                    </div>
+                `;
+            });
+
+            $userListViewDiv.append(htmlContent);
+        }
+
+
+        function renderSyncList(courses) {
+            console.log(courses)
             if (!courses) return;
 
             let htmlContent = '';
@@ -224,8 +258,9 @@
                 `;
             });
 
-            $userListDiv.append(htmlContent);
+            $syncListViewDiv.append(htmlContent);
         }
+
 
         /**
          * Toggles visibility between two views.
@@ -240,7 +275,7 @@
         // Attach form submit handlers
         $loginForm.on('submit', handleLogin);
         $otpForm.on('submit', handleOTPSubmit);
-        $('#sync-matrix-btn').on('click', function () {
+        $syncMatrixBtn.on('click', function () {
             syncWithMatrix(courseUserListToSync);  // Call the syncWithMatrix function and pass courses as parameter
         });
     });
